--- a/view/管理端_产品挂接_完善产品.html
+++ b/view/管理端_产品挂接_完善产品.html
@@ -178,7 +178,24 @@
                 <!-- 内容区域 start -->
                 <div class="edit">
                     <div class="leftEdit">
+                        <div class="a_formItem">
+                            <span>件号：</span>
+                            <input type="text">
+                        </div>
+                        <div class="a_formItem">
+                            <span>入住日期：</span>
+                            <input type="text">
+                        </div>
+                        <div class="a_formItem">
+                            <span>价格：</span>
+                            <input type="text">
+                        </div>
+                        <div class="a_formItem">
+                            <span>件号：</span>
+                            <label>
 
+                            </label>
+                        </div>
                     </div>
                     <div class="rightShow">
                         <div class="ap_item">
