--- a/static/css/base.css
+++ b/static/css/base.css
@@ -141,7 +141,7 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .leftContent .classBox .firstClass .classList { width: 200px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
-.leftContent .classBox .firstClass .classList .classItem { display: block; height: 56px; line-height: 56px; padding-left: 30px; font-size: 16px; border-bottom: 1px solid #eee; color: #666; position: relative; }
+.leftContent .classBox .firstClass .classList .classItem { display: block; height: 56px; line-height: 56px; padding-left: 5px; font-size: 16px; border-bottom: 1px solid #eee; color: #666; position: relative; }
 
 .leftContent .classBox .firstClass .classList .classItem img { width: 50px; height: 50px; margin-top: 3px; vertical-align: top; margin-right: 10px; }
 
@@ -682,4 +682,5 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .ap_list .ap_item .ap_c_a .a { float: right; color: #999; }
 
+/**/
 /*管理端界面 end*/
