--- a/view/index.html
+++ b/view/index.html
@@ -52,7 +52,7 @@
                         <option value="1">JIS2</option>
                     </select>
                     <input type="text" class="searchCondition" value="JIS-001">
-                    <a href="" class="searchBtn"><i class="iconfont icon-search"></i></a>
+                    <button type="submit" class="searchBtn"><i class="iconfont icon-search"></i></button>
                 </form>
             </div>
             <div class="buySaller">
