--- a/view/标准选择.html
+++ b/view/标准选择.html
@@ -103,16 +103,132 @@
                 <div class="firstClass">
                     <div class="flag">选择大类</div>
                     <ul class="classList">
-                        <li><a href="" class="classItem active"><img src="../static/images/index/lei_1.png">螺丝</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_2.png">垫片</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_3.png">螺钉</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_4.png">螺栓</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_5.png">柳钉</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_6.png">销</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_7.png">接头</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_8.png">O型圈</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_9.png">卡环</a></li>
-                        <li><a href="" class="classItem"><img src="../static/images/index/lei_10.png">卡箍</a></li>
+                        <li><a href="" class="classItem active"><img src="../static/images/index/lei_1.png"><img src="../static/images/index/lei_1.png">螺丝
+                            <div class="secondClass">
+                                <div class="clearAll">
+                                    <a href="" class="childItem active">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                    <a href="" class="childItem">
+                                        <div class="childImg">
+                                            <img src="../static/images/index/xz.jpg" alt="">
+                                        </div>
+                                        <div class="childName">普通六角</div>
+                                    </a>
+                                </div>
+                                <!-- 产品说明 tab start -->
+                                <div class="modelTab clearAll">
+                                    <div class="tabHeader">
+                                        <a href="" class="tabItem active" onmousemove="showTabItem(this,'jieshao');">介绍</a>
+                                        <a href="" class="tabItem" onmousemove="showTabItem(this,'luomao');">螺帽</a>
+                                        <a href="" class="tabItem" onmousemove="showTabItem(this,'anzhuangfangshi');">安装方式</a>
+                                        <a href="" class="tabItem" onmousemove="showTabItem(this,'shuoming');">说明</a>
+                                    </div>
+                                    <div class="tabBody">
+                                        <div class="item" id="jieshao" style="display: block">
+                                            1螺丝是利用物体的斜面圆形旋转和摩擦力的物理学和数学原理，循序渐进地紧固器物机件的工具。螺丝是紧固件的通用说法，日常口头语。螺丝为日常生活中不可或缺的工业必需品：如照相机、眼镜、钟表、电子等使用的极小的螺丝；电视、电气制品、乐器、家具等的一般螺丝；至于工程、建筑、桥梁则使用大型螺丝、螺帽；交通器具、飞机、电车、汽车等则为大小螺丝并用。螺丝在工业上负有重要任务，只要地球上存在着工业，则螺丝的功能永远重要。螺丝是千百年来人们生产生活中的共同发明，按照应用领域来看，它是人类的第一大发明
+                                        </div>
+                                        <div class="item" id="luomao" style="display: none">
+                                            2螺丝是利用物体的斜面圆形旋转和摩擦力的物理学和数学原理，循序渐进地紧固器物机件的工具。螺丝是紧固件的通用说法，日常口头语。螺丝为日常生活中不可或缺的工业必需品：如照相机、眼镜、钟表、电子等使用的极小的螺丝；电视、电气制品、乐器、家具等的一般螺丝；至于工程、建筑、桥梁则使用大型螺丝、螺帽；交通器具、飞机、电车、汽车等则为大小螺丝并用。螺丝在工业上负有重要任务，只要地球上存在着工业，则螺丝的功能永远重要。螺丝是千百年来人们生产生活中的共同发明，按照应用领域来看，它是人类的第一大发明
+                                        </div>
+                                        <div class="item" id="anzhuangfangshi" style="display: none">
+                                            3螺丝是利用物体的斜面圆形旋转和摩擦力的物理学和数学原理，循序渐进地紧固器物机件的工具。螺丝是紧固件的通用说法，日常口头语。螺丝为日常生活中不可或缺的工业必需品：如照相机、眼镜、钟表、电子等使用的极小的螺丝；电视、电气制品、乐器、家具等的一般螺丝；至于工程、建筑、桥梁则使用大型螺丝、螺帽；交通器具、飞机、电车、汽车等则为大小螺丝并用。螺丝在工业上负有重要任务，只要地球上存在着工业，则螺丝的功能永远重要。螺丝是千百年来人们生产生活中的共同发明，按照应用领域来看，它是人类的第一大发明
+                                        </div>
+                                        <div class="item" id="shuoming" style="display: none">
+                                            4螺丝是利用物体的斜面圆形旋转和摩擦力的物理学和数学原理，循序渐进地紧固器物机件的工具。螺丝是紧固件的通用说法，日常口头语。螺丝为日常生活中不可或缺的工业必需品：如照相机、眼镜、钟表、电子等使用的极小的螺丝；电视、电气制品、乐器、家具等的一般螺丝；至于工程、建筑、桥梁则使用大型螺丝、螺帽；交通器具、飞机、电车、汽车等则为大小螺丝并用。螺丝在工业上负有重要任务，只要地球上存在着工业，则螺丝的功能永远重要。螺丝是千百年来人们生产生活中的共同发明，按照应用领域来看，它是人类的第一大发明
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- 产品说明 tab end -->
+                            </div>
+                        </a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_2.png"><img
+                                src="../static/images/index/lei_2.png">垫片</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_3.png"><img
+                                src="../static/images/index/lei_3.png">螺钉</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_4.png"><img
+                                src="../static/images/index/lei_4.png">螺栓</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_5.png"><img
+                                src="../static/images/index/lei_5.png">柳钉</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_6.png"><img
+                                src="../static/images/index/lei_5.png">销</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_7.png"><img
+                                src="../static/images/index/lei_7.png">接头</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_8.png"><img
+                                src="../static/images/index/lei_8.png">O型圈</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_9.png"><img
+                                src="../static/images/index/lei_9.png">卡环</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_10.png"><img
+                                src="../static/images/index/lei_10.png">卡箍</a></li>
                         <li><a href="" class="newClass">我有新的品类入驻</a></li>
                     </ul>
                 </div>
