--- a/static/css/base.css
+++ b/static/css/base.css
@@ -43,9 +43,9 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 .topBar .topA .na:not(:last-child)::after { content: ""; position: absolute; color: #999; right: 0px; height: 30px; top: 0px; width: 1px; background-color: #c8c8c8; }
 
 /* logo and search start */
-.logo_search { height: 50px; padding: 10px 0px; margin: 0 auto; background-color: #fff; }
+.logo_search { height: 50px; padding: 1px 0px; margin: 0 auto; background-color: #fff; }
 
-.logo_search .mainLogo { float: left; height: 50px; margin: 6px 0px; width: 25%; }
+.logo_search .mainLogo { float: left; height: 40px; margin: 6px 0px; width: 25%; }
 
 .logo_search .mainLogo img { height: 40px; float: left; }
 
@@ -63,7 +63,7 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .logo_search .searchBox input.searchCondition { padding: 0px 10px; }
 
-.logo_search .searchBox .searchBtn { height: 30px; width: 30px; text-align: center; line-height: 30px; color: #fff; border-radius: 3px; background-color: #f60; display: inline-block; font-size: 16px; vertical-align: middle; }
+.logo_search .searchBox .searchBtn { height: 30px; width: 30px; text-align: center; color: #fff; border-radius: 3px; background-color: #f60; display: inline-block; font-size: 16px; vertical-align: middle; -webkit-box-shadow: none; box-shadow: none; border: 1px solid #f60; outline: none; }
 
 .logo_search .searchBox .searchBtn:hover { background-color: #f90; }
 
@@ -155,9 +155,9 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .leftContent .classBox .secondClass { width: 780px; padding: 10px; min-height: 642px; border-top: 1px solid #72b1e4; float: left; }
 
-.leftContent .classBox .secondClass .childItem { width: 126px; height: 133px; border: 1px solid #b8cad8; float: left; margin-right: 1px; margin-bottom: 1px; }
+.leftContent .classBox .secondClass .childItem { width: 153px; height: 160px; border: 1px solid #b8cad8; float: left; margin-right: 1px; margin-bottom: 1px; }
 
-.leftContent .classBox .secondClass .childItem .childImg { width: 126px; height: 103px; clear: both; overflow: hidden; }
+.leftContent .classBox .secondClass .childItem .childImg { width: 153px; height: 130px; clear: both; overflow: hidden; }
 
 .leftContent .classBox .secondClass .childItem .childImg img { width: 100%; }
 
