--- a/static/css/base.css
+++ b/static/css/base.css
@@ -143,6 +143,8 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .leftContent .classBox .firstClass .classList li { position: relative; }
 
+.leftContent .classBox .firstClass .classList li:hover { background-color: rgba(184, 202, 216, 0.6); }
+
 .leftContent .classBox .firstClass .classList li:hover .innerChooseBox { display: block; }
 
 .leftContent .classBox .firstClass .classList .classItem { display: block; height: 56px; line-height: 56px; padding-left: 5px; font-size: 16px; border-bottom: 1px solid #eee; color: #666; position: relative; }
@@ -594,9 +596,9 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .a_header .logo img { vertical-align: middle; max-height: 30px; margin-right: 10px; }
 
-.a_header .user { color: #fff; font-size: 24px; line-height: 30px; margin-top: 20px; margin-left: 30px; }
+.a_header .user { color: #fff; font-size: 20px; line-height: 30px; margin-top: 20px; margin-left: 30px; }
 
-.a_header .tel { float: right; line-height: 30px; margin-top: 20px; font-size: 26px; color: #fff; margin-right: 10px; }
+.a_header .tel { float: right; line-height: 30px; margin-top: 20px; font-size: 20px; color: #fff; margin-right: 10px; }
 
 .a_topBar { height: 35px; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; background-image: url("../images/common/topbg.jpg"); clear: both; overflow: hidden; }
 
